test/envoy-ext-proc/loadbalancer/original-destination/envoy-ext-proc.yaml


# ok!!!
# curl localhost:10080 -i

admin:
  access_log:
    - name: envoy.access_loggers.file
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
        path: /dev/null
  address:
    socket_address:
      address: 127.0.0.1
      port_value: 19000
      ipv4_compat: true

static_resources:
  listeners:
    - name: envoy-gateway-proxy-ready-0.0.0.0-10080
      address:
        socket_address:
          address: '0.0.0.0'
          port_value: 10080
          protocol: TCP
      per_connection_buffer_limit_bytes: 4194304
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.file
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
                      path: "/dev/stdout"
                      log_format:
                        json_format:
                          ":authority": "%REQ(:AUTHORITY)%"
                          "bytes_received": "%BYTES_RECEIVED%"
                          "bytes_sent": "%BYTES_SENT%"
                          "connection_termination_details": "%CONNECTION_TERMINATION_DETAILS%"
                          "downstream_local_address": "%DOWNSTREAM_LOCAL_ADDRESS%"
                          "downstream_remote_address": "%DOWNSTREAM_REMOTE_ADDRESS%"
                          "duration": "%DURATION%"
                          "method": "%REQ(:METHOD)%"
                          "protocol": "%PROTOCOL%"
                          "requested_server_name": "%REQUESTED_SERVER_NAME%"
                          "response_code": "%RESPONSE_CODE%"
                          "response_code_details": "%RESPONSE_CODE_DETAILS%"
                          "response_flags": "%RESPONSE_FLAGS%"
                          "route_name": "%ROUTE_NAME%"
                          "start_time": "%START_TIME%"
                          "upstream_cluster": "%UPSTREAM_CLUSTER%"
                          "upstream_host": "%UPSTREAM_HOST%"
                          "upstream_local_address": "%UPSTREAM_LOCAL_ADDRESS%"
                          "upstream_transport_failure_reason": "%UPSTREAM_TRANSPORT_FAILURE_REASON%"
                          "user-agent": "%REQ(USER-AGENT)%"
                          "x-envoy-origin-path": "%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%"
                          "x-envoy-upstream-service-time": "%RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)%"
                          "x-forwarded-for": "%REQ(X-FORWARDED-FOR)%"
                          "x-request-id": "%REQ(X-REQUEST-ID)%"
                http_filters:
                  # External Processing Filter
                  - name: envoy.filters.http.ext_proc
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.ext_proc.v3.ExternalProcessor
                      grpc_service:
                        envoy_grpc:
                          cluster_name: ext_proc_cluster
                        timeout: 10s
                      processing_mode:
                        request_header_mode: SEND
                        response_header_mode: SEND
#                          request_body_mode: BUFFERED
#                          response_body_mode: STREAMED
                      message_timeout: 60s

                  # Router filter (must be last)
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: original_route
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
#                              headers:
#                                - name: "routing-strategy"
#                                  string_match:
#                                    safe_regex:
#                                      regex: .*
                          route:
                            cluster: original_destination_cluster
                            timeout: 300s  # Increase route timeout


  clusters:
    # External Processor Cluster (Sidecar)
    - name: ext_proc_cluster
      connect_timeout: 10s
      type: STATIC
      lb_policy: ROUND_ROBIN
      dns_lookup_family: AUTO  # Enable dual-stack DNS
      upstream_connection_options:
        tcp_keepalive:
          keepalive_probes: 3
          keepalive_time: 30
          keepalive_interval: 5
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: ext_proc_cluster
        endpoints:
          - lb_endpoints:
#                - endpoint:
#                    address:
#                      socket_address:
#                        address: ::1  # IPv6 localhost
#                        port_value: 50052
              - endpoint:
                  address:
                    socket_address:
                      address: "127.0.0.1"  # IPv4 localhost fallback
                      port_value: 50051

    - name: original_destination_cluster
      type: ORIGINAL_DST
      original_dst_lb_config:
        use_http_header: true
        http_header_name: "target-pod"
      connect_timeout: 6s
      lb_policy: CLUSTER_PROVIDED
      dns_lookup_family: AUTO
      upstream_connection_options:
        tcp_keepalive:
          keepalive_probes: 3
          keepalive_time: 30
          keepalive_interval: 5
